objects/ProjectObject__c.object
<CustomObject>
    <fields>
        <fullName>Internal_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Internal Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoicing_Schedule__c</fullName>
        <formula>Text(Order_Line_Number__r.Invoicing_Schedule__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoicing Schedule</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Auto_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Auto Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LBU_CPS__c</fullName>
        <formula>TEXT(PS_Project_Number__r.LBU__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LBU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBU__c</fullName>
        <label>LBU</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AD1</fullName>
                </value>
                <value>
                    <fullName>AU1</fullName>
                </value>
                <value>
                    <fullName>BE5</fullName>
                </value>
                <value>
                    <fullName>CA1</fullName>
                </value>
                <value>
                    <fullName>CH1</fullName>
                </value>
                <value>
                    <fullName>CN1</fullName>
                </value>
                <value>
                    <fullName>CPS</fullName>
                </value>
                <value>
                    <fullName>DE5</fullName>
                </value>
                <value>
                    <fullName>DK1</fullName>
                </value>
                <value>
                    <fullName>FI1</fullName>
                </value>
                <value>
                    <fullName>FR5</fullName>
                </value>
                <value>
                    <fullName>HK1</fullName>
                </value>
                <value>
                    <fullName>IN1</fullName>
                </value>
                <value>
                    <fullName>IT1</fullName>
                </value>
                <value>
                    <fullName>ME1</fullName>
                </value>
                <value>
                    <fullName>NL5</fullName>
                </value>
                <value>
                    <fullName>NO1</fullName>
                </value>
                <value>
                    <fullName>NZ1</fullName>
                </value>
                <value>
                    <fullName>PH1</fullName>
                </value>
                <value>
                    <fullName>SA5</fullName>
                </value>
                <value>
                    <fullName>SE1</fullName>
                </value>
                <value>
                    <fullName>SG1</fullName>
                </value>
                <value>
                    <fullName>UK1</fullName>
                </value>
                <value>
                    <fullName>US5</fullName>
                </value>
                <value>
                    <fullName>ZA1</fullName>
                </value>
                <value>
                    <fullName>ID1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LPS_scoped_value__c</fullName>
        <label>LPS scoped value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Likelihood__c</fullName>
        <formula>TEXT( Opportunity__r.Likelihood__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Likelihood</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_PS_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Local PS Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Localisation_Lead_New__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Localisation Lead</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Is_Localisation_Lead__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>ProjectsRGgy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MIT_Lead__c</fullName>
        <label>Localisation Lead</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Avril Peryer</fullName>
                </value>
                <value>
                    <fullName>Fei Liu</fullName>
                </value>
                <value>
                    <fullName>Lucy Burgess</fullName>
                </value>
                <value>
                    <fullName>Samantha Lonigro</fullName>
                </value>
                <value>
                    <fullName>William Pearce</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Manual_Send_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manual Send Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Milestone_Status_Reports__c</fullName>
        <formula>IF (CONTAINS( Milestone_Status__c , &apos;green&apos;), &apos;Green&apos;,&apos;Red&apos;)</formula>
        <label>Milestone Status Reports</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Milestone_Status__c</fullName>
        <formula>IMAGE(IF( ROUND(Milestones_Value__c,2)  &lt;&gt;  ROUND(Total_Orderline_Value_RollUp__c,2) ,&quot;/img/samples/light_red.gif&quot;,&quot;/img/samples/light_green.gif&quot;),&quot;Project Status Indicator&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Green if milestones value equals total orderline value - otherwise red.</inlineHelpText>
        <label>Milestone Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Milestones_Value__c</fullName>
        <inlineHelpText>Total of all milestones associated with project</inlineHelpText>
        <label>Milestones Value</label>
        <summarizedField>Milestone__c.Amount__c</summarizedField>
        <summaryForeignKey>Milestone__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Net_Amount_To_be_Invoiced__c</fullName>
        <formula>0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Amount To be Invoiced</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Oats_Email__c</fullName>
        <label>Oats Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Old_Project_Co_ordinator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field used for backend and used in email alerts to send email to old project co-ordinator.</description>
        <label>Old Project Co-ordinator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Old_Project_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field used for backend and used in email alerts to send email to old project manager.</description>
        <label>Old Project Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>On_Hold__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This defines if the project is on hold on a particular state in its life cycle.</description>
        <label>On Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Number__c</fullName>
        <formula>PS_Project_Number__r.Opportunity__r.OpportunityId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Probability__c</fullName>
        <formula>Opportunity__r.Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Probability</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Opportunity_Record_URL__c</fullName>
        <formula>Left($Api.Enterprise_Server_URL_190,(find(&apos;/services&apos;,$Api.Enterprise_Server_URL_190)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Record URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <formula>TEXT( Opportunity__r.StageName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR (2 AND 3) OR 4</booleanFilter>
            <errorMessage>Project Cannot be created from a Variation Opportunity.</errorMessage>
            <filterItems>
                <field>Opportunity.Variation_Opportunity__c</field>
                <operation>equals</operation>
                <value>No</value>
            </filterItems>
            <filterItems>
                <field>Opportunity.Variation_Opportunity__c</field>
                <operation>equals</operation>
                <value>Yes</value>
            </filterItems>
            <filterItems>
                <field>Opportunity.CreatedDate</field>
                <operation>lessOrEqual</operation>
                <value>4/6/2021, 9:00 AM</value>
            </filterItems>
            <filterItems>
                <field>$User.Id</field>
                <operation>equals</operation>
                <value>0054G00000CSIBq</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Header_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Number</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR (2 AND 3)</booleanFilter>
            <errorMessage>Variation Contract cannot be linked to the Project.</errorMessage>
            <filterItems>
                <field>Contract.Original_Contract__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>Contract.CreatedDate</field>
                <operation>lessOrEqual</operation>
                <value>4/6/2021, 4:30 AM</value>
            </filterItems>
            <filterItems>
                <field>Contract.Original_Contract__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Line_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Line Number (Legacy)</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>$Source.Order_Header_Number__c</field>
                <operation>equals</operation>
                <valueField>Contract_Line__c.Contract__c</valueField>
            </filterItems>
            <filterItems>
                <field>Contract_Line__c.Order_Method__c</field>
                <operation>equals</operation>
                <value>T&amp;E</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contract_Line__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Products_Count__c</fullName>
        <label>Order Products Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Status__c</fullName>
        <formula>TEXT( Order_Header_Number__r.Status )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Orderline_Value__c</fullName>
        <formula>Order_Line_Number__r.Running_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Orderline Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Original_Price__c</fullName>
        <formula>Order_Line_Number__r.Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Original Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PNO__c</fullName>
        <label>PNO</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PS_Contract__c</fullName>
        <description>This field has been created for user to navigate to PS Project&apos;s Contract to update Subscription start date from CPS Project.</description>
        <formula>HYPERLINK(&quot;https://shl--uat.my.salesforce.com/&quot;+ PS_Project_Number__r.Order_Header_Number__c  ,  PS_Project_Number__r.Order_Header_Number__r.ContractNumber ,&quot;_self﻿&quot;)</formula>
        <label>PS Contract</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PS_Project_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PS Project Number</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>Only PS project can be linked with CPS Project.</errorMessage>
            <filterItems>
                <field>ProjectObject__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Project</value>
            </filterItems>
            <filterItems>
                <field>$User.Id</field>
                <operation>equals</operation>
                <value>0054G00000CSIBq</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ProjectObject__c</referenceTo>
        <relationshipLabel>Central PS Projects</relationshipLabel>
        <relationshipName>Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Platform_Client_ID__c</fullName>
        <inlineHelpText>Please enter the Client ID for Technology Solutions projects.</inlineHelpText>
        <label>Platform Client ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <label>Platform</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>P41</fullName>
                </value>
                <value>
                    <fullName>SODA</fullName>
                </value>
                <value>
                    <fullName>DSPS</fullName>
                </value>
                <value>
                    <fullName>Nacho</fullName>
                </value>
                <value>
                    <fullName>MFS</fullName>
                </value>
                <value>
                    <fullName>OAS</fullName>
                </value>
                <value>
                    <fullName>ORS</fullName>
                </value>
                <value>
                    <fullName>Values@work</fullName>
                </value>
                <value>
                    <fullName>CCQ</fullName>
                </value>
                <value>
                    <fullName>ASO Stand-alone</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pricing_Model__c</fullName>
        <label>Pricing Model</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed Price</fullName>
                </value>
                <value>
                    <fullName>Fixed Price with Expenses</fullName>
                </value>
                <value>
                    <fullName>Time &amp; Expenses</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Account_Name__c</fullName>
        <description>This field is used to retrieve Project&apos;s Account name and is referred in Email Template.</description>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Account_Number__c</fullName>
        <description>Backend field to display Account Number linked with the Main Project in email templates.</description>
        <formula>Account__r.Account_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Closed_Date__c</fullName>
        <description>This captures the latest date, whenever a project is marked Completed or Cancelled.</description>
        <label>Project Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Co_ordinator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Co-ordinator</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>User.Is_Project_Co_ordinator__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>$User.Id</field>
                <operation>equals</operation>
                <value>0054G00000CSIBq</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Complexity_Formula__c</fullName>
        <formula>PS_Project_Number__r.Project_Complexity__c</formula>
        <label>Project Complexity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Complexity__c</fullName>
        <label>Project Complexity</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Cost__c</fullName>
        <label>Agreed Project Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project_Deliverable_Count__c</fullName>
        <label>Project Deliverable Count</label>
        <summaryForeignKey>Project_Deliverables__c.Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Project_Deliverables__c</fullName>
        <label>Project Deliverables</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Description__c</fullName>
        <label>Project Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_End_Date__c</fullName>
        <label>Project End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Health_Detail__c</fullName>
        <label>Project Health Detail</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Amber</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Health_Report_Status__c</fullName>
        <formula>IF (CONTAINS(Project_Health_Status__c ,&apos;green&apos;),&apos;Green&apos;,IF(CONTAINS(Project_Health_Status__c, &apos;yellow&apos;),&apos;Amber&apos;,IF(CONTAINS(Project_Health_Status__c, &apos;red&apos;),&apos;Red&apos;,&apos;&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Health Report Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Health_Status__c</fullName>
        <formula>IMAGE(CASE( Project_Health_Detail__c , 
&quot;Green&quot;, &quot;/img/samples/light_green.gif&quot;, 
&quot;Amber&quot;, &quot;/img/samples/light_yellow.gif&quot;, 
&quot;Red&quot;, &quot;/img/samples/light_red.gif&quot;, 
&quot;/s.gif&quot;), 
&quot;status color&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Health Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Manager</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>User.Is_Project_Manager__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>$User.Id</field>
                <operation>equals</operation>
                <value>0054G00000CSIBq</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Project Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Nick_Name__c</fullName>
        <label>Project Nick Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Plan__c</fullName>
        <label>Project Plan</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Review_Chase_Date_Due__c</fullName>
        <formula>Project_Review_Date_Sent__c  + 5</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Review Chase Date Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Review_Chase_Sent__c</fullName>
        <label>Project Review Chase Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Review_Date_Sent__c</fullName>
        <label>Project Review Date Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Review_Received__c</fullName>
        <label>Project Review Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Risk__c</fullName>
        <label>Project Risk</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Segmentation__c</fullName>
        <label>Project Segmentation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Complex</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>High Touch – Enterprise</fullName>
                </value>
                <value>
                    <fullName>High Touch – Large</fullName>
                </value>
                <value>
                    <fullName>High Touch – Medium</fullName>
                </value>
                <value>
                    <fullName>High Touch – Small</fullName>
                </value>
                <value>
                    <fullName>Service Led</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Start_Date__c</fullName>
        <label>Project Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Status__c</fullName>
        <label>Project Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Initiation</fullName>
                </value>
                <value>
                    <fullName>Planning</fullName>
                </value>
                <value>
                    <fullName>Executing</fullName>
                </value>
                <value>
                    <fullName>Closing</fullName>
                </value>
                <value>
                    <fullName>Closed/Delivered</fullName>
                </value>
                <value>
                    <fullName>Closed/Cancelled</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Live</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Type__c</fullName>
        <label>Project Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Consulting and outsourced assessments</fullName>
                </value>
                <value>
                    <fullName>Inco Training</fullName>
                </value>
                <value>
                    <fullName>Internal Organisation</fullName>
                </value>
                <value>
                    <fullName>Pre-sales</fullName>
                </value>
                <value>
                    <fullName>Public Training</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Advisory Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Purchased_PS_Funds__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box when the client has purchased or re-purposed PS funds to be used for projects at some point in the future.</inlineHelpText>
        <label>Purchased PS Funds</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quality_Issue__c</fullName>
        <label>Quality Issue</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quality_Issue_comments__c</fullName>
        <label>Quality Issue comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RAG_Indicator_Amber__c</fullName>
        <defaultValue>0</defaultValue>
        <label>RAG Indicator Count Amber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RAG_Indicator_Green__c</fullName>
        <defaultValue>0</defaultValue>
        <label>RAG Indicator Count Green</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RAG_Indicator_Red__c</fullName>
        <defaultValue>0</defaultValue>
        <description>USed in backend to calculate the Overall Complexity of Product</description>
        <label>RAG Indicator Count Red</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RAG_Reason__c</fullName>
        <label>RAG Reason</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RAG__c</fullName>
        <label>RAG</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                    <color>#FF0000</color>
                    <label>Red</label>
                </value>
                <value>
                    <fullName>Amber</fullName>
                    <color>#FF9900</color>
                    <label>Amber</label>
                </value>
                <value>
                    <fullName>Green</fullName>
                    <color>#33CC00</color>
                    <default>true</default>
                    <label>Green</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_CPS__c</fullName>
        <label>Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mis-Scoped</fullName>
                </value>
                <value>
                    <fullName>Re-Scope/Change Requests</fullName>
                </value>
                <value>
                    <fullName>User Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_Additional_CPS_Time__c</fullName>
        <label>Reason for Additional CPS Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Client Delays</fullName>
                </value>
                <value>
                    <fullName>CS Delays</fullName>
                </value>
                <value>
                    <fullName>LPS Delays</fullName>
                </value>
                <value>
                    <fullName>Mis-Scoped</fullName>
                </value>
                <value>
                    <fullName>PM Delays</fullName>
                </value>
                <value>
                    <fullName>QA Delays</fullName>
                </value>
                <value>
                    <fullName>System Issues</fullName>
                </value>
                <value>
                    <fullName>Tech Delays</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_Delivery_Target_Variance__c</fullName>
        <label>Reason for Delivery Target Variance</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_no_Signed_SOW__c</fullName>
        <label>Reason for no Signed SOW</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reasons_for_Variances_impacting_KPI_s__c</fullName>
        <label>Reasons for Variances impacting KPI’s</label>
        <type>TextArea</type>
    </fields>
</CustomObject>